[B]Version 5.0.59 (March 24, 2020)[/B]
- Code Base Changes:
    - none
- Resolvers Added:
    - none
- Resolvers Fixed/Updated:
    - dailymotion
    - entervideo
    - jetload
    - streamwire
    - uptobox
- Resolvers Removed
    - none
- Languages Added/Updated
    - none

[B]Version 5.0.58 (March 20, 2020)[/B]
- Code Base Changes:
    - none
- Resolvers Added:
    - pkspeed
    - streamwire
- Resolvers Fixed/Updated:
    - entervideo
    - mystream
    - streamz
    - waaw
- Resolvers Removed
    - dailynotion
    - megamp4
- Languages Added/Updated
    - none

[B]Version 5.0.57 (March 15, 2020)[/B]
- Code Base Changes:
    - helpers
- Resolvers Added:
    - none
- Resolvers Fixed/Updated:
    - fembed
    - videa
- Resolvers Removed
    - none
- Languages Added/Updated
    - none

[B]Version 5.0.56 (March 6, 2020)[/B]
- Code Base Changes:
    - version bump
- Resolvers Added:
    - none
- Resolvers Fixed/Updated:
    - none
- Resolvers Removed
    - none
- Languages Added/Updated
    - none

[B]Version 5.0.55 (February 27, 2020)[/B]
- Code Base Changes:
    - get_dom fix
- Resolvers Added:
    - none
- Resolvers Fixed/Updated:
    - videa.hu
- Resolvers Removed
    - none
- Languages Added/Updated
    - none

[B]Version 5.0.54 (February 21, 2020)[/B]
- Code Base Changes:
    - none
- Resolvers Added:
    - none
- Resolvers Fixed/Updated:
    - gounlimited
    - myviru
- Resolvers Removed
    - thevideo_me
- Languages Added/Updated
    - none

[B]Version 5.0.53 (February 11, 2020)[/B]
- Code Base Changes:
    - none
- Resolvers Added:
    - thevideo_me
- Resolvers Fixed/Updated:
    - vevio
- Resolvers Removed
    - none
- Languages Added/Updated
    - none

[B]Version 5.0.52 (February 6, 2020)[/B]
- Code Base Changes:
    - none
- Resolvers Added:
    - none
- Resolvers Fixed/Updated:
    - mixdrop
    - mystream
- Resolvers Removed
    - none
- Languages Added/Updated
    - none

[B]Version 5.0.51 (January 23, 2020)[/B]
- Code Base Changes:
    - none